# FIRE

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DESIGN-HANDOFF-V3.md  README.md  eslint.config.mjs  first_rwa.json  jackpot_stats.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pools_cache.json  railway.toml
app/: next.config.js  package.json  railway.toml
archive/: README.md
buy-tracker/: .gitignore  README.md  buy_tracker.js  package-lock.json  package.json
distributions/: dist_1784433869000_NVDA.json  dist_1784490229342_NVDA.json  dist_1784490994676_TSLA.json  dist_1784491765680_AAPL.json  dist_1784492480022_AMD.json  dist_1784493063442_NVDA.json  dist_1784493114378_TSLA.json  dist_1784493163589_AAPL.json  dist_1784493207403_AMD.json  dist_1784564163286_NVDA.json  dist_1784565019882_TSLA.json  dist_1784565925109_AAPL.json  dist_1784566737740_AMD.json  dist_1784657563238_NVDA.json  dist_1784658348099_TSLA.json  dist_1784659138397_AAPL.json  dist_1784659876208_AMD.json  dist_1784739708473_NVDA.json  dist_1784740441038_TSLA.json  dist_1784741236876_AAPL.json  dist_1784741919053_AMD.json  dist_1784826386215_GME.json  dist_1784903991481_NVDA.json  dist_1784904369721_TSLA.json  dist_1784904698000_ETH.json  dist_1784905041703_AMD.json
docs/: PR2_HANDOFF.md
fire-website/: package-lock.json
migrations/: 002_creator_and_protocol_vault.sql
programs/stake-manager/: Cargo.toml
programs/stake-manager/src/: lib.rs
scripts/: create-raydium-pool.ts  init-mainnet.ts  wolf-of-fire-15s-prompt.md  wolf-of-fire-15s.md
tests/: prove.test.ts
(+150 files in other folders)
